file name renamed & cta text alignment fixed

--- a/styles/organisms-lodging_forms.css
+++ b/styles/organisms-lodging_forms.css
@@ -39,6 +39,7 @@
         width: 82%;
     }
     .lodging-form__cta {
+        text-align: center;
         display: block !important;
         margin-bottom: 2.5rem;
     }
